# prioritizer

./: pyproject.toml  requirements.txt
src/: main.py  settings.py  weighted_queue.py
tests/: test_main.py  test_weighted_queue.py
