[tool.poetry]
name = "prioritizer"
version = "0.1.0"
description = "The URL Prioritizer is a specialized component of the search engine that intelligently sorts incoming URLs from a queue of unprioritized links.\""
authors = ["Vlad-Sebastian Cretu <vlad.sebastian.cretu.dev@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
aiokafka = "^0.8.1"
neo4j = "^5.12.0"
redis = "^5.0.0"
pydantic-settings = "^2.0.3"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.1"
pytest-cov = "^4.1.0"
numpy = "^1.25.2"
scipy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
